自訂表單編號/WS起單

--- a/Training/Training.csproj
+++ b/Training/Training.csproj
@@ -89,6 +89,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarAutoNbr.cs" />
     <Compile Include="Data\DemoDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
