--- a/Training/Training.csproj
+++ b/Training/Training.csproj
@@ -104,6 +104,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
     <Compile Include="Task\CreateFormTask.cs" />
+    <Compile Include="Trigger\CarForm\EndFormTrigger.cs" />
     <Compile Include="Trigger\DemoForm\EndFormTrigger.cs" />
     <Compile Include="Trigger\DemoForm\OnFlowFormTrigger.cs" />
     <Compile Include="Trigger\DemoForm\StartFormTrigger.cs" />
