結案新增資料到文管內

--- a/Lab.Lib/Lab.Lib.csproj
+++ b/Lab.Lib/Lab.Lib.csproj
@@ -60,6 +60,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\UOF24\bin\Ede.Uof.Utility.Data.dll</HintPath>
     </Reference>
+    <Reference Include="Ede.Uof.Utility.FileCenter, Version=24.0.8398.52406, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\UOF24\bin\Ede.Uof.Utility.FileCenter.dll</HintPath>
+    </Reference>
     <Reference Include="Ede.Uof.Utility.Log, Version=22.0.8050.27472, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\UOF24\bin\Ede.Uof.Utility.Log.dll</HintPath>
@@ -83,6 +87,8 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.EnterpriseServices" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -106,8 +112,20 @@
     <Compile Include="Task\LabTask.cs" />
     <Compile Include="Trigger\LabForm\EndFormTrigger.cs" />
     <Compile Include="UCO\LabUCO.cs" />
+    <Compile Include="Web References\Auth\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
+    <Compile Include="Web References\DMS\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.map</DependentUpon>
+    </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="Data\LabFormDataSet.xsc">
@@ -125,6 +143,49 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Web References\Auth\Authentication.wsdl" />
+    <None Include="Web References\Auth\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Web References\DMS\Dms.wsdl" />
+    <None Include="Web References\DMS\Reference.map">
+      <Generator>MSDiscoCodeGenerator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferences Include="Web References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WebReferenceUrl Include="http://localhost/UOF_CAR/PublicAPI/DMS/Dms.asmx">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\DMS\</RelPath>
+      <UpdateFromURL>http://localhost/UOF_CAR/PublicAPI/DMS/Dms.asmx</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>Lab_Lib_DMS_Dms</CachedSettingsPropName>
+    </WebReferenceUrl>
+    <WebReferenceUrl Include="http://localhost/UOF_CAR/PublicAPI/System/Authentication.asmx">
+      <UrlBehavior>Dynamic</UrlBehavior>
+      <RelPath>Web References\Auth\</RelPath>
+      <UpdateFromURL>http://localhost/UOF_CAR/PublicAPI/System/Authentication.asmx</UpdateFromURL>
+      <ServiceLocationURL>
+      </ServiceLocationURL>
+      <CachedDynamicPropName>
+      </CachedDynamicPropName>
+      <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
+      <CachedSettingsPropName>Lab_Lib_Auth_Authentication</CachedSettingsPropName>
+    </WebReferenceUrl>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Web References\Auth\Authentication.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Web References\DMS\Dms.disco" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
