外掛欄位+欄位驗證

--- a/UOF24/App_Data/plugin.xml
+++ b/UOF24/App_Data/plugin.xml
@@ -4,10 +4,7 @@
   <WKF>
     <Field>
       <OptionalField>
-        <FieldItem
-          DesignUI="~/WKF/FormManagement/WKF_OptionalFields/SetupField_FormChooseField.aspx" 
-          WriteUI="~/WKF/FormManagement/WKF_OptionalFields/FormChooseFieldUC.ascx"
-          FieldName="FormChooseField">
+        <FieldItem DesignUI="~/WKF/FormManagement/WKF_OptionalFields/SetupField_FormChooseField.aspx" WriteUI="~/WKF/FormManagement/WKF_OptionalFields/FormChooseFieldUC.ascx" FieldName="FormChooseField">
           <Display>
             <Value Culture="zh-TW" Name="表單參考欄位" />
             <Value Culture="zh-CN" Name="表单参考区域" />
@@ -120,7 +117,7 @@
             </Tag>
           </Condition>
         </FieldItem>
-		    <!-- ==Start 表單發佈審核 Start== -->		
+        <!-- ==Start 表單發佈審核 Start== -->
         <!--<FieldItem DesignUI="~/WKF/FormManagement/WKF_OptionalFields/SetupField_FormReleaseApprovalField.aspx" WriteUI="~/WKF/FormManagement/WKF_OptionalFields/FormReleaseApprovalFieldUC.ascx" FieldName="FormReleaseApprovalField">
           <Display>
             <Value Culture="zh-TW" Name="表單發佈審核欄位" />
@@ -153,7 +150,7 @@
           </Condition>
         </FieldItem>
         -->
-		    <!-- ==End 表單發佈審核 End== -->
+        <!-- ==End 表單發佈審核 End== -->
         <!-- ==Start 差勤表單V1 Start== -->
         <FieldItem DesignUI="~/EIP/Duty/WKFOptionalFields/SetupField_LeaveInfo.aspx" WriteUI="~/EIP/Duty/WKFOptionalFields/LeaveInfoUC.ascx" FieldName="LeaveInfo">
           <Display>
@@ -276,7 +273,7 @@
               <Display Clture="id" Name="BU" />
               <Display Clture="mt-MT" Name="BU" />
               <Display Clture="ja-JP" Name="BU" />
-           </Tag>
+            </Tag>
           </Condition>
         </FieldItem>
         <!-- ==End 差勤表單V1 End== -->
@@ -791,8 +788,8 @@
             </Tag>
           </Condition>
         </FieldItem>
-        <!-- ==End 電子公文表單 End== -->        
-        <!-- ==Start 文管表單 Start== -->        
+        <!-- ==End 電子公文表單 End== -->
+        <!-- ==Start 文管表單 Start== -->
         <FieldItem DesignUI="~/DMS/WKFOptionalFields/SetupField_DMSDocView.aspx" WriteUI="~/DMS/WKFOptionalFields/DMSDocViewUC.ascx" FieldName="DMSDocView">
           <Display>
             <Value Culture="zh-TW" Name="文件內容" />
@@ -804,9 +801,7 @@
             <Value Culture="ja-JP" Name="ファイル内容" />
           </Display>
         </FieldItem>
-        <!-- ==End 文管表單 End== -->                
-        
-        
+        <!-- ==End 文管表單 End== -->
         <!-- ==Start 104版差勤表單 Start== -->
         <!--<FieldItem MobileWriteUI="~/EIP/Duty/WKFOptionalFields104/OverTimeInfoMobileUC.ascx" DesignUI="~/EIP/Duty/WKFOptionalFields104/SetupField_OverTimeInfo.aspx" WriteUI="~/EIP/Duty/WKFOptionalFields104/OverTimeInfoUC.ascx" FieldName="OverTimeInfo104">
           <Display>
@@ -1414,7 +1409,29 @@
             </Tag>
           </Condition>
         </FieldItem>-->
-        <!-- ==End 104版差勤表單 End== -->        
+        <!-- ==End 104版差勤表單 End== -->
+        <FieldItem DesignUI="~/CDS/WKF_Fields/SetupField_optionField2.aspx" WriteUI="~/CDS/WKF_Fields/optionField2.ascx" FieldName="CAR_optionField2">
+          <Display>
+            <Value Culture="zh-TW" Name="採購資訊" />
+            <Value Culture="zh-CN" Name="採購資訊" />
+            <Value Culture="en-US" Name="採購資訊" />
+            <Value Culture="vi" Name="採購資訊" />
+          </Display>
+          <Condition>
+            <Tag Name="type">
+              <Display Clture="zh-TW" Name="類別" />
+              <Display Clture="zh-CN" Name="類別" />
+              <Display Clture="en-US" Name="類別" />
+              <Display Clture="vi" Name="類別" />
+            </Tag>
+            <Tag Name="amount">
+              <Display Clture="zh-TW" Name="金額" />
+              <Display Clture="zh-CN" Name="金額" />
+              <Display Clture="en-US" Name="金額" />
+              <Display Clture="vi" Name="金額" />
+            </Tag>
+          </Condition>
+        </FieldItem>
       </OptionalField>
     </Field>
   </WKF>
